# pyares-opencpc

./: .gitignore  LICENSE  README.MD  pyproject.toml  start_device_opencpc.py
src/pyares_opencpc/: __init__.py  opencpc_old.py  pyares_opencpc.py
src/pyares_opencpc/opencpc/: __init__.py  datamodel.py  sht45.py  sps30.py
src/pyares_opencpc/opencpc/configinfo/: config_info_meta.py  config_info_utils.py
src/pyares_opencpc/opencpc/transport/: dummy.py  messages.py  pack.py  serial.py  serial_legacy.py  serial_search.py
tests/: sim_opencpc.py  test_analyzer.py  test_device.py
